--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.2",
     "discord-api-types": "^0.37.11",
     "discord.js": "^14.5.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
