--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-    token= "MTAyNjg5NDgxMzk3MjQxNDUxNA.Gbk9Af.L-s6PrAzkYQ40HCVV43QQi1F18T4wMycG8aELU"
+    token= "MTAyNjg5NDgxMzk3MjQxNDUxNA.Gn0Ayf.ECSk5yTrEHJ9CAsbs8WhqdP35B3hnuBuwrxX2I"
     clientId= "1026894813972414514"
 	guildId= "728233239998627842"
     bearer_token= "AAAAAAAAAAAAAAAAAAAAANenhwEAAAAA1zXOAXOG%2FinpXjvLvevCZf1V%2B4U%3DlbE3WVRDvgdEuTMGJgipwgOTIoEO1c3ckwpJOywwoxRe8CAfPh"
